feat: commit decrease dept & increase coverage