@@ -27,12 +27,13 @@ package cls;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * GetAllMethodsSnippet.
  */
 public class GetAllMethodsSnippet {
+  private GetAllMethodsSnippet() {
+  }
 
   /**
    * Print all declared methods of the class.
@@ -43,6 +44,6 @@ public class GetAllMethodsSnippet {
   public static List<String> getAllMethods(final Class<?> cls) {
     return Arrays.stream(cls.getDeclaredMethods())
         .map(Method::getName)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
